# dashboard-dash

./: Dockerfile  pyproject.toml
dashboard/: app.py
