[tool.poetry]
name = "dashboard-dash"
version = "0.1.0"
description = ""
authors = ["Diego Rodriguez Mancini <diegorodriguezmancini@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.5.1"
pandas = "^1.4.3"
openpyxl = "^3.0.10"
dash-bootstrap-components = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
